--- a/index.html
+++ b/index.html
@@ -4,9 +4,99 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="pages/index.css">
   <title>Mustang Micro</title>
 </head>
 <body>
-
+  <div class="page">
+    <section class="card">
+      <div class="card__bar card__bar_color_white"></div>
+      <img class="card__image" src="./images/65-twin.jpeg" alt="1965 Twin Amp">
+      <h2 class="card__title">'65 Twin + Compressor</h2>
+      <p class="card__desc">The king of the cleans with a reverb and tremolo to die for, the '65 Twin Reverb covers everything from splashy surf to chicken pickin' with confidence. It maintains its bold clarity no matter what you throw at it. An indispensable mid-'60s clean-tone favorite—with a low compression setting. A Compressor adds clean sustain.</p>
+    </section>
+    <section class="card">
+      <div class="card__bar card__bar_color_red"></div>
+      <img class="card__image" src="./images/65-deluxe.jpeg" alt="">
+      <h2 class="card__title">'65 Deluxe</h2>
+      <p class="card__desc">Admired for its lush reverb and pulsing tremolo, the '65 Deluxe Reverb is one of Fender's quintessential amps. Known for its pristine clean tones and perfectly suited for the stage or the studio, no amp collection is complete without one.</p>
+    </section>
+    <section class="card">
+      <div class="card__bar card__bar_color_green"></div>
+      <img class="card__image" src="./images/57-twin.jpeg" alt="">
+      <h2 class="card__title">'57 Twin</h2>
+      <p class="card__desc">First designed to achieve big, clean tones at high volume, rock players soon learned that a twist of the volume knob revealed the '57 Twin's true nature and aggressive tendencies: pure rock 'n' roll.</p>
+    </section>
+    <section class="card">
+      <div class="card__bar card__bar_color_blue"></div>
+      <img class="card__image" src="./images/60-british.jpeg" alt="">
+      <h2 class="card__title">'60s British</h2>
+      <p class="card__desc">From the sound of the British Invasion to modern chart-toppers, this English legend offers everything from sparkly clean tones to throaty overdrive.
+        Inspired by the Vox AC30.</p>
+    </section>
+    <section class="card">
+      <div class="card__bar card__bar_color_yellow"></div>
+      <img class="card__image" src="./images/65-deluxe.jpeg" alt="">
+      <h2 class="card__title">'65 Deluxe + Greenbox OD</h2>
+      <p class="card__desc">Same as the ’65 Deluxe above, with Greenbox overdrive based on the Ibanez TS808 Tube Screamer.
+        Originally designed to emulate the sound of a distorted tube amp, this classic pedal increases mid-range and cuts low-end, making it perfect for solos.</p>
+    </section>
+    <section class="card">
+      <div class="card__bar card__bar_color_magenta"></div>
+      <img class="card__image" src="./images/70-british.jpeg" alt="">
+      <h2 class="card__title">'70s British</h2>
+      <p class="card__desc">This English classic sparked the imaginations of rock guitarists around the world with its distinctive mid-range crunch and audacious attitude (i.e. it's loud).
+        Inspired by a late-’60s/early-’70s Marshall Super Lead, the amp that powered the dawn of hard rock.</p>
+    </section>
+    <section class="card">
+      <div class="card__bar card__bar_color_turquoise"></div>
+      <img class="card__image" src="./images/american-90.jpeg" alt="">
+      <h2 class="card__title">'90s American</h2>
+      <p class="card__desc">With a tight, responsive low-end and distortion to spare, this Cali classic rewrote the book on high gain and became synonymous with hard rock and heavy metal throughout the '90s and beyond.
+        Based on the Mesa Dual Rectifier.</p>
+    </section>
+    <section class="card">
+      <div class="card__bar card__bar_color_orange"></div>
+      <img class="card__image" src="./images/bassbreaker-15.jpeg" alt="">
+      <h2 class="card__title">BB15 HighGain</h2>
+      <p class="card__desc">Based on the high-gain structure setting of the Fender Bassbreaker 15.</p>
+    </section>
+    <section class="card">
+      <div class="card__bar card__bar_color_raspberry"></div>
+      <img class="card__image" src="./images/friedman-be-100.jpeg" alt="">
+      <h2 class="card__title">FBE-100</h2>
+      <p class="card__desc">Inspired by the lead channels (both BE and HBE) of the Friedman BE-100.</p>
+    </section>
+    <section class="card">
+      <div class="card__bar card__bar_color_springgreen"></div>
+      <img class="card__image" src="./images/metal-2000.jpeg" alt="">
+      <h2 class="card__title">Metal 2000</h2>
+      <p class="card__desc">Full of high octane rage and fury, the 2000 Metal amps captured the imagination of metalheads and aspiring shredders with huge gain, tight lows, aggressive mids and biting highs perfect for an aggressive pick attack.</p>
+    </section>
+    <section class="card">
+      <div class="card__bar card__bar_color_violet"></div>
+      <img class="card__image" src="./images/bassman-300.jpeg" alt="">
+      <h2 class="card__title">Uber</h2>
+      <p class="card__desc">Ideal for heavy, aggressive music; inspired by the super-high-gain lead channel of the Bogner Uberschall head.</p>
+    </section>
+    <section class="card">
+      <div class="card__bar card__bar_color_cyan"></div>
+      <img class="card__image" src="./images/studio-preamp.jpeg" alt="">
+      <h2 class="card__title">Studio Preamp</h2>
+      <p class="card__desc">The cleanest tone you can get and perfect for letting the natural sound of the guitar shine through, studio preamps are used by jazz, country and funk players who prefer an uncolored tone.</p>
+    </section>
+  </div>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
